route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: smart-business-guide-new
  namespace: upbeat-apps
  labels:
    app: smart-business-guide
    app.kubernetes.io/component: smart-business-guide
    app.kubernetes.io/instance: smart-business-guide
    app.kubernetes.io/name: smart-business-guide
    app.kubernetes.io/part-of: smart-business-guide
  annotations:
    openshift.io/host.generated: 'false'
spec:
  host: smart-business-guide.2.rahtiapp.fi
  to:
    kind: Service
    name: smart-business-guide
    weight: 100
  port:
    targetPort: 8501-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
